--- a/.github/workflows/cricket-score.yml
+++ b/.github/workflows/cricket-score.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+            ls -la  
+            if [ ! -f requirements.txt ]; then echo "ERROR: requirements.txt not found"; exit 1; fi
+            pip install -r requirements.txt
 
       - name: Run Migrations
         run: |
